--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "guppy-pre-commit": "^0.4.0",
     "nightmare": "^2.5.2",
     "nightmare-upload": "^0.1.1",
+    "papaparse": "^4.3.1",
     "protractor": ">4.0.9 <6.0",
     "selenium-webdriver": "^2.53.1",
     "sinon": "^1.17.2",
